# tinygp

./: .gitignore  AGENTS.md  BENCHMARK.md  README.md  main.py  pyproject.toml
benchmark/: __init__.py  common.py  runner.py  targets.py
benchmarks/: __init__.py
benchmarks/targets/: __init__.py  keijzer.py  nguyen.py
examples/: automatic_kernel_synthesis.py  compare_all_vs_gplearn.py  compare_basic_vs_gplearn.py
src/tinygp/: benchmark.py  definitions.py  evaluate.py  operations.py  utils.py
src/tinygp/strategies/: __init__.py  ars.py  asebo.py  basic.py  cma_es.py  cr_fm_nes.py  differential_evolution.py  diffusion_evolution.py  discovered_es.py  esmc.py  evotf_es.py  gesmr_ga.py  gplearn_gp.py  gradientless_descent.py  guided_es.py  hill_climbing.py  iamalgam_full.py  iamalgam_univariate.py  learned_es.py  learned_ga.py  lm_ma_es.py  ma_es.py  mr15_ga.py  noise_reuse_es.py  open_es.py  persistent_es.py  pgpe.py  pso.py  random_search.py  rm_es.py  samr_ga.py  sep_cma_es.py  sim_anneal.py  simple_es.py  simple_ga.py  snes.py  sv_cma_es.py  sv_openes.py  xnes.py
tests/: test_arithmetic.py  test_benchmark_targets.py
