[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tinygp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "tinygrad",
]

[tool.uv.sources]
tinygrad = { path = "tinygrad", editable = true }

[dependency-groups]
dev = [
    "gplearn>=0.4.3",
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tinygp"]
